# Sim2Real-Segmentation

./: .gitignore  README.md  main_notebook.ipynb  pyproject.toml
part1/: dataset.blend  sceneRandomizer.py
part2/: dataloader.py  loadParam.py  load_turing.sh  network.py  network2.py  test.py  train.py  utils.py
part3/: README.md
report/: report.aux  report.tex
