[tool.poetry]
name = "group5-p2"
version = "0.1.0"
description = ""
authors = ["felixng <ngthinh302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
torchvision = "^0.19.1"
wandb = "^0.17.8"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
